=== master

* Add Model::DatasetModule#model accessor (davekaro) (#2040)

* Add trilogy adapter (jeremyevans)

=== 5.68.0 (2023-05-01)

* Add validation_helpers_generic_type_messages plugin for more useful type validation failure messages (jeremyevans) (#2028)

* Make constraint_validations plugin not validate missing columns that have a default value (jeremyevans) (#2023)

* Skip normal type name parsing for enum/array/composite/range/multirange types on PostgreSQL (jeremyevans) (#2019)

* Fix corner case where pg_extended_date_support did not work correctly when using the jdbc/postgresql adapter (jeremyevans)

* Include :min_value and :max_value schema entries for date/timestamp/timestamptz columns on PostgreSQL 9.6+ (jeremyevans)

=== 5.67.0 (2023-04-01)

* Fix dumping of string column sizes in the schema dumper on MSSQL (jeremyevans) (#2013)

* Improve dumping of tables in non-default schemas in the schema_dumper extension (jeremyevans) (#2006)

* Make Database#{tables,views} support :qualify option on Microsoft SQL Server (jeremyevans)

* Avoid use of singleton classes for datasets instances on Ruby 2.4+ (jeremyevans) (#2007)

* Deprecate registering datasets extensions using an object other than a module (jeremyevans)

* Add set_literalizer extension, for treating set usage in datasets similar to array usage (jeremyevans) (#1997)

=== 5.66.0 (2023-03-01)

* Recognize SQLite error related to strict tables as a constraint violation when using the amalgalite adapter (jeremyevans)

* Make Dataset#count work correctly for datasets using Dataset#values (jeremyevans) (#1992)

* Make Dataset#count with no argument/block handle dataset with custom SQL using ORDER BY on MSSQL (jeremyevans)

* Make Dataset#empty? correctly handle datasets with custom SQL or using Dataset#values where the first value is NULL (andy-k, jeremyevans) (#1990)

=== 5.65.0 (2023-02-01)

* Allow pg_auto_parameterize extension to use placeholder loaders (jeremyevans)
